Fix scrolling to header bug / fix z-index on header when modal is shown

--- a/gatsby/src/styles/components/_subscribe-modal.scss
+++ b/gatsby/src/styles/components/_subscribe-modal.scss
@@ -11,6 +11,7 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.15s ease, visibility 0.15s ease;
+    z-index: 999;
 
     &__content {
         &-body {
