--- a/gatsby/src/styles/pages/_single-essay.scss
+++ b/gatsby/src/styles/pages/_single-essay.scss
@@ -127,11 +127,13 @@
                 border: none;
                 padding-bottom: 0;
                 margin-bottom: 5px;
+                scroll-margin-top: $header--height + $padding--xxsmall;
             }
 
             h3 {
                 @include font__size-single-essay-h3;
                 margin-bottom: 10px;
+                scroll-margin-top: $header--height + $padding--ml;
             }
 
             p:first-child {
